--- a/apps/build.gradle
+++ b/apps/build.gradle
@@ -44,10 +44,7 @@ allprojects {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         maven {
-            credentials {
-                username pspdfMavenUser
-                password pspdfMavenPass
-            }
+            credentials
             url 'https://customers.pspdfkit.com/maven/'
         }
         maven { url "https://maven.google.com/" }
