--- a/libs/flutter_student_embed/pubspec.yaml
+++ b/libs/flutter_student_embed/pubspec.yaml
@@ -60,6 +60,9 @@ dev_dependencies:
   built_value_generator: ^8.1.1
   intl_generator: ^0.2.0+0
 
+dependency_overrides:
+  intl: 0.17.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
